# jobseeker

./: .gitignore  .gnawtreewriter_session.json  .gnawtreewriter_session_id  AGENTS.md  BUILD.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  EDITOR_QUICKSTART.md  EDITOR_README.md  FEDORA_BUILD.md  LICENSE  Overview.md  PORTABLE_WINDOWS.md  README.md  SECURITY.md  SLINT_CONVERSION.md  TCARV_1_0.md  TCARV_ADDON_TAC.md  Utvecklardagbok.md  agents.md  applied_december_export.csv  applied_home_export.csv  build-portable-windows.sh  build.rs  iced_slint_audit.md  jobseeker.desktop  roadmap.md  run_jobseeker.sh  test_api_mini.rs  test_multi_municipalities.rs  test_query_logic.rs
.github/workflows/: android.yml  build.yml  release.yml  rust.yml  slint-build.yml
.gnawtreewriter_backups/: db.rs_backup_20260116_224757_875.json
GnawData/raw/sessions/: session_2026-01-16_23-22-38.raw  session_2026-01-16_23-25-00.raw  session_2026-01-16_23-30-38.raw
References/GnawTreeWriter_docs/: AGENTS.md  AI_AGENT_TEST_SCENARIOS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER_REPORT.md  FUTURE_CONCEPTS.md  INDEX.md  KNOWN_ISSUES.md  LLM_INTEGRATION.md  MAINTENANCE.md  MULTI_AGENT_DEVELOPMENT.md  QML_EXAMPLES.md  README.md  RECIPES.md  ROADMAP.md  TESTING.md
android/: AndroidManifest.xml
assets/editor/: editor.html
scripts/: run-with-test-db.sh
sessions/: session_2026-01-16_20-20-26.raw
src/: ai.rs  api.rs  data.rs  db.rs  db_migration.rs  lib.rs  main.rs  models.rs  reports.rs  rich_editor.rs
tests/: settings_roundtrip.rs
ui/: main.slint
