[package]
name = "Jobseeker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-openai = { version = "0.32.2", features = ["full"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
iced = { version = "0.14.0", features = ["svg", "tokio"] }
reqwest = { version = "0.12.28", features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
redb = "2.1"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
urlencoding = "2.1"
webbrowser = "1.0"
rfd = "0.15"
genpdf = "0.2"
docx-rs = "0.4"
pulldown-cmark = "0.11"
regex = "1.10"

[dev-dependencies]
tempfile = "3.8"
