[package]
name = "Jobseeker"
version = "0.2.0-alpha.7"
edition = "2024"
authors = ["Svensson <tuulikk@gmail.com>"]
description = "Ett kraftfullt verktyg för att hitta jobb, ranka annonser med AI och hantera ansökningar direkt till PDF/Word."
license = "MPL-2.0"
repository = "https://github.com/Gnaw-Software/Jobseeker"
keywords = ["jobsearch", "rust", "ai", "ollama", "iced", "productivity", "redb"]
categories = ["command-line-utilities", "productivity", "gui"]

[package.metadata.android]
package = "com.gnawsoftware.jobseeker"
label = "Jobseeker"
assets = "assets"
build_targets = ["aarch64-linux-android"]

[lib]
name = "jobseeker"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.100"
async-openai = { version = "0.32.2", features = ["full"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
iced = { version = "0.14.0", features = ["svg", "tokio"] }
reqwest = { version = "0.12.28", features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
redb = "2.4.0"
directories = "6.0"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
urlencoding = "2.1"
webbrowser = "1.0"
rfd = "0.15"
genpdf = "0.2"
docx-rs = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6", features = ["native-activity"] }
android_logger = "0.14"
jni = "0.21"
