[package]
name = "Jobseeker"
version = "0.2.0-alpha.7"
edition = "2024"
authors = ["Svensson <tuulikk@gmail.com>"]
description = "Ett kraftfullt verktyg för att hitta jobb, ranka annonser med AI och hantera ansökningar direkt till PDF/Word."
license = "MPL-2.0"
repository = "https://github.com/Gnaw-Software/Jobseeker"
keywords = ["jobsearch", "rust", "ai", "ollama", "slint", "productivity", "redb"]
categories = ["command-line-utilities", "productivity", "gui"]

[package.metadata.android]
package = "com.gnawsoftware.jobseeker"
label = "Jobseeker"
assets = "assets"
build_targets = ["aarch64-linux-android"]
manifest = "android/AndroidManifest.xml"

[package.metadata.android.signing.release]
path = "dummy.keystore"
keystore_password = "password"
key_alias = "android"
key_password = "password"

[lib]
name = "Jobseeker"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
slint-build = "1.14"

[dependencies]
anyhow = "1.0.100"
async-openai = { version = "0.32.2", default-features = false, features = ["full", "rustls"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
redb = "2.4.0"
directories = "6.0"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
urlencoding = "2.1"
webbrowser = "1.0"
# rfd = "0.15"  # Temporarily disabled - ashpd version conflicts
genpdf = "0.2"
docx-rs = "0.4"
log = "0.4.29"
regex = "1.12.2"

[target.'cfg(target_os = "android")'.dependencies]
slint = { version = "1.14", default-features = false, features = ["backend-android-activity-06", "renderer-skia", "compat-1-2", "i-slint-backend-android-activity"] }
i-slint-backend-android-activity = { version = "1.14", features = ["native-activity"] }
android-activity = { version = "0.6", features = ["native-activity"] }
android_logger = "0.14"
jni = "0.21"

[target.'cfg(not(target_os = "android"))'.dependencies]
slint = { version = "1.14", default-features = true }
# rfd = "0.15"  # Temporarily disabled - ashpd version conflicts
